--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d447d0c3-a706-4e03-80fc-1fef28ce8c09",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1d4d81e1-a076-41ef-b89f-24878de2f73e",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c64bd96e-9a00-4ffa-be36-a038693c7f73",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "389da7e5-5674-4426-9022-63e649d41af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pooling(mat,ksize,method='max',pad=False):\n",
+    "    '''Non-overlapping pooling on 2D or 3D data.\n",
+    "\n",
+    "    <mat>: ndarray, input array to pool.\n",
+    "    <ksize>: tuple of 2, kernel size in (ky, kx).\n",
+    "    <method>: str, 'max for max-pooling, \n",
+    "                   'mean' for mean-pooling.\n",
+    "    <pad>: bool, pad <mat> or not. If no pad, output has size\n",
+    "           n//f, n being <mat> size, f being kernel size.\n",
+    "           if pad, output has size ceil(n/f).\n",
+    "\n",
+    "    Return <result>: pooled matrix.\n",
+    "    '''\n",
+    "\n",
+    "    m, n = mat.shape[:2]\n",
+    "    ky,kx=ksize\n",
+    "\n",
+    "    _ceil=lambda x,y: int(np.ceil(x/float(y)))\n",
+    "\n",
+    "    if pad:\n",
+    "        ny=_ceil(m,ky)\n",
+    "        nx=_ceil(n,kx)\n",
+    "        size=(ny*ky, nx*kx)+mat.shape[2:]\n",
+    "        mat_pad=np.full(size,np.nan)\n",
+    "        mat_pad[:m,:n,...]=mat\n",
+    "    else:\n",
+    "        ny=m//ky\n",
+    "        nx=n//kx\n",
+    "        mat_pad=mat[:ny*ky, :nx*kx, ...]\n",
+    "\n",
+    "    new_shape=(ny,ky,nx,kx)+mat.shape[2:]\n",
+    "\n",
+    "    if method=='max':\n",
+    "        result=np.nanmax(mat_pad.reshape(new_shape),axis=(1,3))\n",
+    "    else:\n",
+    "        result=np.nanmean(mat_pad.reshape(new_shape),axis=(1,3))\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "16b2a75e-4b99-4394-8c96-f1c992477b0f",
    "metadata": {},
    "outputs": [],
@@ -122,13 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "361f3ab1-40b8-466b-bd8c-04be9a52e9f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_pixart(sizex,sizey):\n",
     "    image = Image.open(\"image.jpg\")\n",
+    "    if image.size[0] > 1000:\n",
+    "        pool_size = 10\n",
+    "    else:\n",
+    "        pool_size = 5\n",
+    "    image = pooling(np.array(image),(pool_size,pool_size),method=\"mean\",pad=True).astype(np.uint8)\n",
+    "    image = Image.fromarray(image)\n",
     "    image_resized = image.resize((sizex,sizey))\n",
     "    image_resized = np.array(image_resized)\n",
     "    new_image = image_resized.copy()\n",
@@ -147,13 +200,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_pixart(300,300)"
+    "generate_pixart(400,300)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56784c71-7f7e-49ae-bb28-864ff0220afd",
+   "id": "34c43747-896c-4d94-8833-be52b411300f",
    "metadata": {},
    "outputs": [],
    "source": []
